--- a/Virus_sim.ipynb
+++ b/Virus_sim.ipynb
@@ -31,7 +31,7 @@
     "from person import Person\n",
     "from virus import Virus\n",
     "from event import Home, Work, School, Shop\n",
-    "from visuals import render, plot_sick_ratio, plot_cumul_inf_ratio\n",
+    "from visuals import plot_sick_ratio, plot_cumul_inf_ratio\n",
     "from run_sim import run_sim\n",
     "from analysis import cumul_inf_ratio"
    ]
@@ -63,24 +63,21 @@
     "                     random_seed : int = 42\n",
     "                    ) -> tuple:\n",
     "    \"\"\"\n",
-    "    Simulation scenario setup. \n",
+    "    Simulation scenario setup. All locations (homes etc.), persons and the virus are \n",
+    "    created here. \n",
     "    \n",
-    "    For homes, workplaces etc locations the x and y coordinates are for visualization \n",
-    "    purposes only. Those can be set to practically any value if map visualizations are \n",
-    "    not used. \n",
-    "    \n",
-    "    The size parameter is more important. It defines the bounding box for the location \n",
-    "    and the persons are randomly located inside that box. Larger size means less likely \n",
+    "    In home, school, work and shop setup the size parameter defines the bounding box for the  \n",
+    "    place and the persons are randomly located inside that box. Larger size means less likely \n",
     "    virus transfer. The dimensions are in meters. Virus transfer affects only the persons\n",
     "    assigned to that location and the virus will not transfer outside of the box. \n",
-    "    All \"event\" locations, i.e. work, school and shop, use the same basic code structure, \n",
-    "    since for the sake of simplicity those are essentially just boxes where the persons \n",
-    "    are located inside. \n",
     "    \n",
-    "    People are assigned to homes, schools, workplaces, etc. The actual home, workplace \n",
-    "    etc. are set at the beginning of simulation and it remains constant. Note that e.g. \n",
-    "    the larger the number of workplaces, the less persons there will be per workplace, \n",
-    "    so the number of workplaces, schools and shops can be used to test social distancing. \n",
+    "    People are assigned to homes, schools, workplaces, etc. These are set at the beginning \n",
+    "    of simulation and those remain constant, i.e. the persons will always return to the \n",
+    "    same home and will always go to the same workplace. Note that e.g. the larger the number \n",
+    "    of different workplaces, the less persons there will be per workplace if the number of \n",
+    "    persons is kept constant. The number of workplaces, schools and shops can be used to \n",
+    "    test social distancing. \n",
+    "    \n",
     "    The schedules of different location/event visits is setup in person event schedule \n",
     "    at one hour granularity level. The setup covers one full day of life that repeats as such \n",
     "    indefinitely. Only possible change to the scheduling is when person is sick and the\n",
@@ -93,13 +90,13 @@
     "    The virus setup includes the contagious time window (in hours), time to heal and other \n",
     "    basic parameters. \n",
     "    \n",
-    "    At the end of the function the initial virus infections are created as a \n",
+    "    At the end of this function the initial virus infections are created as a \n",
     "    starting condition for the simulation. \n",
     "    \n",
     "    This function returns the person and event instances that can be used to run \n",
     "    the simulation. \n",
     "    \n",
-    "    Selected param explanations: \n",
+    "    Selected parameter explanations: \n",
     "    n_home : number of homes. \n",
     "    n_work : number of workplaces.\n",
     "    n_school : number of schools.\n",
@@ -116,41 +113,25 @@
     "    homes = []\n",
     "    grid_w = 50 \n",
     "    for idx in range(n_home):\n",
-    "        x = 10 + (idx % grid_w) * 20 \n",
-    "        y = 100 - int(idx / grid_w) * 20 \n",
-    "        home = Home(name='h_{}'.format(idx), \n",
-    "                    loc=[x, y], \n",
-    "                    size=[10, 10])\n",
+    "        home = Home(name='h_{}'.format(idx), size=[10, 10])\n",
     "        homes.append(home)\n",
     "\n",
     "    # Create workplaces\n",
     "    workplaces = []\n",
     "    for idx in range(n_work):\n",
-    "        x = 10 + idx * 60 \n",
-    "        y = 200 \n",
-    "        work = Work(name='work_{}'.format(idx), \n",
-    "                    loc=[x, y], \n",
-    "                    size=[50, 50])\n",
+    "        work = Work(name='work_{}'.format(idx), size=[50, 50])\n",
     "        workplaces.append(work)\n",
     "        \n",
     "    # Create schools\n",
     "    schools = []\n",
     "    for idx in range(n_school):\n",
-    "        x = 10 + idx * 100 \n",
-    "        y = 300\n",
-    "        school = School(name='school_{}'.format(idx), \n",
-    "                    loc=[x, y], \n",
-    "                    size=[100, 50])\n",
+    "        school = School(name='school_{}'.format(idx), size=[100, 50])\n",
     "        schools.append(school)\n",
     "\n",
     "    # Create shops\n",
     "    shops = []\n",
     "    for idx in range(n_shop):\n",
-    "        x = 10 + idx * 120 \n",
-    "        y = 400\n",
-    "        shop = Shop(name='shop_{}'.format(idx), \n",
-    "                    loc=[x, y], \n",
-    "                    size=[100, 100])\n",
+    "        shop = Shop(name='shop_{}'.format(idx), size=[100, 100])\n",
     "        shops.append(shop)\n",
     "        \n",
     "    # Create the virus\n",
@@ -161,11 +142,13 @@
     "                  sneeze_per_h=0.5)\n",
     "    \n",
     "    # Create person instances and assign them to homes and workplaces etc\n",
-    "    # Persons are created per home just to simplify the setup procedure.  \n",
     "    persons = []\n",
     "    adult_counter = 0\n",
     "    kid_counter = 0\n",
-    "    \n",
+    "\n",
+    "    # Create look-up tables for the number of persons per home. This ensures that the \n",
+    "    # person distributions stay the same when some other parameters are changed, such \n",
+    "    # as the number of schools. \n",
     "    n_lut = 50\n",
     "    n_kid_lut = []\n",
     "    n_adult_lut = []\n",
@@ -173,11 +156,9 @@
     "        n_adult = np.random.randint(n_adults_per_home[1] + 1 - n_adults_per_home[0])\n",
     "        n_adult += n_adults_per_home[0]\n",
     "        n_adult_lut.append(n_adult)\n",
-    "        \n",
     "        n_kid = np.random.randint(n_kids_per_home[1] + 1 - n_kids_per_home[0])\n",
     "        n_kid += n_kids_per_home[0]\n",
     "        n_kid_lut.append(n_kid)\n",
-    "    \n",
     "    \n",
     "    for home in homes: \n",
     "        n_adult = n_adult_lut[adult_counter % n_lut]\n",
@@ -208,7 +189,6 @@
     "                person.enable_sick_leave()\n",
     "            \n",
     "            persons.append(person)\n",
-    "            \n",
     "            \n",
     "        n_kid = n_kid_lut[kid_counter % n_lut]\n",
     "        kid_counter += 1\n",
@@ -276,11 +256,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim round took 13.2 s\n",
-      "Sim round took 10.0 s\n",
-      "Sim round took 10.6 s\n",
-      "Sim round took 9.4 s\n",
-      "Sim round took 7.2 s\n"
+      "Sim round took 11.4 s\n",
+      "Sim round took 10.1 s\n",
+      "Sim round took 8.8 s\n",
+      "Sim round took 8.6 s\n",
+      "Sim round took 5.9 s\n"
      ]
     },
     {
@@ -348,10 +328,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim round took 12.7 s\n",
-      "Sim round took 12.0 s\n",
+      "Sim round took 10.8 s\n",
+      "Sim round took 9.4 s\n",
       "Sim round took 7.4 s\n",
-      "Sim round took 5.6 s\n"
+      "Sim round took 8.4 s\n"
      ]
     },
     {
@@ -419,11 +399,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sim round took 17.7 s\n",
-      "Sim round took 11.1 s\n",
-      "Sim round took 10.3 s\n",
-      "Sim round took 9.7 s\n",
-      "Sim round took 9.7 s\n"
+      "Sim round took 21.5 s\n",
+      "Sim round took 12.3 s\n",
+      "Sim round took 18.4 s\n",
+      "Sim round took 12.4 s\n",
+      "Sim round took 11.5 s\n"
      ]
     },
     {
@@ -553,6 +533,13 @@
     "plot_sick_ratio(results)\n",
     "plot_cumul_inf_ratio(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
